[tool.poetry]
name = "hackstar"
version = "0.1.0"
description = "tcod roguelike tutorial"
authors = ["JnyJny <erik.oshaughnessy@gmail.com>"]
license = "apache-2.0"

[tool.poetry.scripts]
hackstar = "hackstar:cli"

[tool.poetry.dependencies]
python = "^3.7"
tcod = "^10.1"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
